--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
     "slug": "gamja",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/LOGO.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
+      "image": "./assets/LOGO.png",
+      "resizeMode": "center",
       "backgroundColor": "#ffffff"
     },
     "updates": {
