--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-loading-spinner-overlay": "^3.0.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-web": "0.17.7"
