--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-fetch-blob": "^0.10.8",
+    "react-native-grid-list": "^1.1.0",
     "react-native-loading-spinner-overlay": "^3.0.0",
+    "react-native-super-grid": "^4.4.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-web": "0.17.7"
   },
