--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native-stack": "^6.6.2",
     "axios": "^0.27.2",
+    "dependencies": "^0.0.1",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "install": "^0.13.0",
+    "peer": "^0.6.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-grid-list": "^1.1.0",
     "react-native-loading-spinner-overlay": "^3.0.0",
     "react-native-super-grid": "^4.4.0",
+    "react-native-svg": "^12.3.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-web": "0.17.7"
   },
