--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "install": "^0.13.0",
+    "moment": "^2.29.3",
     "peer": "^0.6.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
