--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.6",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native-stack": "^6.6.2",
     "axios": "^0.27.2",
     "dependencies": "^0.0.1",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "expo-storage": "^44.0.0",
     "install": "^0.13.0",
     "moment": "^2.29.3",
     "peer": "^0.6.1",
+    "prettier": "^2.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
