--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-super-grid": "^4.4.0",
     "react-native-svg": "^12.3.0",
     "react-native-toast-message": "^2.1.5",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "expo-updates": "~0.13.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
